--- a/Upload/inc/plugins/ougc/LandingPage/settings.json
+++ b/Upload/inc/plugins/ougc/LandingPage/settings.json
@@ -1,14 +1,14 @@
 {
   "showToGroups": {
     "optionscode": "groupselect",
-    "value": "3,4,6"
-  },
-  "exceptScripts": {
-    "optionscode": "textarea",
-    "value": "{\n  \"member.php\": {\n    \"action\": [\n      \"register\",\n      \"do_register\",\n      \"login\",\n      \"do_login\"\n    ]\n  },\n  \"contact.php\": \"\"\n}"
+    "value": 1
   },
   "redirectPage": {
     "optionscode": "text",
-    "value": "./member.php?action=register"
+    "value": "member.php?action=register"
+  },
+  "exceptScripts": {
+    "optionscode": "textarea",
+    "value": "{\n  \"captcha.php\": \"\",\n  \"contact.php\": \"\",\n  \"css.php\": \"\",\n  \"member.php\": {\n    \"action\": [\n      \"register\",\n      \"do_register\",\n      \"login\",\n      \"do_login\",\n      \"logout\"\n    ]\n  },\n  \"task.php\": \"\",\n  \"xmlhttp.php\": \"\"\n}"
   }
 }
