--- a/Upload/inc/plugins/ougc/LandingPage/settings.json
+++ b/Upload/inc/plugins/ougc/LandingPage/settings.json
@@ -9,6 +9,6 @@
   },
   "exceptScripts": {
     "optionscode": "textarea",
-    "value": "{\n  \"captcha.php\": \"\",\n  \"contact.php\": \"\",\n  \"css.php\": \"\",\n  \"member.php\": {\n    \"action\": [\n      \"register\",\n      \"do_register\",\n      \"login\",\n      \"do_login\",\n      \"logout\"\n    ]\n  },\n  \"task.php\": \"\",\n  \"xmlhttp.php\": \"\"\n}"
+    "value": "{\n  \"captcha.php\": \"\",\n  \"contact.php\": \"\",\n  \"member.php\": {\n    \"action\": [\n      \"register\",\n      \"do_register\",\n      \"login\",\n      \"do_login\",\n      \"logout\"\n    ]\n  },\n}"
   }
 }
